Use better position of "Last Price" column in "Investment Capital Gains" reports

BUG:498054
FIXED-IN:5.2